--- a/todo/templates/base.html
+++ b/todo/templates/base.html
@@ -24,10 +24,10 @@
 	<header align="center">
 		<h1>ToDo App</h1>
 		{% if user.is_authenticated %}
-		<a href="{% url 'logout' %}">logout</a></br>
+		<a href="{% url 'logout' %}">Logout</a></br>
 
 		{% else %}
-		<a href="{% url 'login' %}">login</a> / <a href="{% url 'signup' %}">signup</a>
+		<a href="{% url 'login' %}">Login</a> / <a href="{% url 'signup' %}">Signup</a>
 		{% endif %}
 		<hr>
 	</header>
